<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <!-- Username label -->
    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/username_label"
        android:textSize="20sp"/>

    <!-- Username text field -->
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="150dp"
        android:layout_alignBottom="@id/tv_username"
        android:layout_alignEnd="@id/tv_username"
        android:textSize="18sp"/>

    <!-- Password label -->
    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_username"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/password_label"
        android:textSize="20sp"/>

    <!-- Password text field -->
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="150dp"
        android:layout_alignBottom="@id/tv_password"
        android:layout_alignEnd="@id/tv_password"
        android:textSize="18sp"
        android:inputType="textWebPassword"/>

    <!-- Login button -->
    <Button
        android:id="@+id/b_login2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_below="@id/tv_password"
        android:layout_marginTop="75dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:textSize="20sp"/>
</RelativeLayout>